fix image stretch

--- a/css/style.css
+++ b/css/style.css
@@ -659,11 +659,11 @@ nav.contact-menu ul li a:hover {
     .menu-trigger {
         background: url("../images/hamburger-icon.svg") no-repeat center / cover;
         display: block;
-        height: 35px;
+        height: 1.75rem;
         position: absolute;
-        right: 20px;
-        top: 15px;
-        width: 35px;
+        right: 2rem;
+        top: 1rem;
+        width: 1.75rem;
         z-index: 10;
     }
 
@@ -693,7 +693,7 @@ nav.contact-menu ul li a:hover {
         display: block;
         height: 1.75rem;
         position: fixed;
-        right: 3rem;
+        right: 2rem;
         top: 1rem;
         width: 1.75rem;
         z-index: 20;
